# website-hackwithhyweene

./: .gitignore  Makefile  NOTES.md  Pipfile  README.md  index.html  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommands.sh
.github/workflows/: build.yml
content/blog/: 2020-08-27-hello-world.md  2021-10-17-apple-m1-comment-installer-psycopg2-binary.md  2021-10-17-comment-installer-psycopg2-binary-sur-apple-m1.md  2022-05-06-comment-jai-enrichi-des-metriques-prometheus.md  2024-08-27-hello-world copy.md  2024-09-16-kafka-supprimer-tous-les-events-dun-topic.md  2024-09-16-supprimer-tous-les-events-dun-topic-kafka.md  2024-10-27-jai-decide-que-cetait-assez.md  2024-10-27-transformation-jai-decide-que-cetait-assez.md  2024-10-29-jai-monte-mon-hyweeneflix-et-hyweenefy-perso.md  2024-11-02-transformation-semaine1.md  2024-11-02-transformation-semaine2.md  2024-11-11-transformation-semaine2.md  2024-11-18-transformation-nouvelle-annee.md  2024-11-18-transformation-nouvelle-annee.md.draft  2024-12-31-transformation-nouvelle-annee.md  2025-03-31-rest-api-et-status-code-http.md  2025-03-31-rest-api-methodes-et-status-code-http.md  2025-08-29-comment-je-squash-mes-commits.md  2025-10-09-transformation-des-nouvelles.md  (+6 more)
css/: style.css
docs/: CNAME  index.html
publish/: index.html
scripts/: check_dead_links.py  quick_add_link.py  smolweb_validator.sh
src/: config.py  main.py
templates/: blog_feed_rss.j2  blog_post.j2  blog_post_list.j2  homepage.j2  links_list.j2  links_post.j2  main.j2  page.j2  resume.j2  robots.txt.j2
(+323 files in other folders)
