[project]
name = "website-hackwithhyweene"
version = "0.1.0"
description = "A static site generator for hack-with-hyweene.com"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "pyyaml",
    "markdown",
    "pydantic",
    "python-slugify",
    "pydantic-settings",
    "lxml",
    "prettierfier",
    "defusedxml",
    "beautifulsoup4",
    "markdown2[all]",
]

[dependency-groups]
dev = [
    "html5validator",
    "pyment>=0.3.3",
]
