[project]
name = "website-hyweene"
version = "0.1.0"
description = "A static site generator for hyweene.fr"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "jinja2",
    "pyyaml",
    "markdown",
    "pydantic",
    "python-slugify",
    "pydantic-settings",
    "lxml",
    "prettierfier",
    "defusedxml",
    "beautifulsoup4",
    "markdown2[all]",
    "slugify>=0.0.1",
    "requests>=2.32.5",
    "readtime>=3.0.0",
]

[dependency-groups]
dev = [
    "html5validator",
    "pyment>=0.3.3",
]
